# Algoritmos_y_Estructuras_de_Datos

./: README.md
Parcial_1_AyED/: Makefile
Parcial_1_AyED/src/: Asignacion.cpp  Asignacion.h  CMakeLists.txt  Calculadora.cpp  Calculadora.h  Condicional.cpp  Condicional.h  Declaracion.cpp  Declaracion.h  Instruccion.cpp  Instruccion.h  Jump.cpp  Jump.h  Lector.cpp  Lector.h  Lista.cpp  Lista.h  Pila.cpp  Pila.h  Procesador.cpp  Procesador.h  Show.cpp  Show.h  Variable.cpp  Variable.h  main.cpp  programa.txt
Parcial_2_AyED/: Makefile
Parcial_2_AyED/src/: Arbol.cpp  Arbol.h  data.json  main.cpp
Parcial_3_AyED/: Makefile
Parcial_3_AyED/src/: Tree.hpp  graph.cpp
